--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,10 @@ spring:
     jdbc:
       initialize-schema: ALWAYS
   datasource:
-    url:
-    dbcp2:
-      driver-class-name: 
+    url: jdbc:mysql://127.0.0.1:13306/spring_batch
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: 
+    password: 
+  jpa:
+    show-sql: true
       
